# FairRoot

./: CMakeLists.txt
cmake/modules/: FindBAT.cmake  Findcuba.cmake
example/: CMakeLists.txt
example/BayesianAnalysis/: CMakeLists.txt  OscAnalysisLinkDef.h
example/BayesianAnalysis/src/MQDevice/: RooFileSink.cxx  RooFileSink.h  RooProcessor.cxx  RooProcessor.h  RooSampler.cxx  RooSampler.h
example/BayesianAnalysis/src/MQPayload/: ECdata.cxx  ECdata.h
example/BayesianAnalysis/src/MQTask/: RooSamplerTask.cxx  RooSamplerTask.h  RooSamplerTask.tpl
example/BayesianAnalysis/src/data/: FileReader.cxx  FileReader.h  SidsDataSet.cxx  SidsDataSet.h  SidsParameters.cxx  SidsParameters.h
example/BayesianAnalysis/src/macro/: Analysis.cxx  IsomerAnalysis.cxx  IsomerAnalysis.h  OscRooSimulation.cxx  OscRooSimulation.h  OscillationAnalysis.cxx  OscillationAnalysis.h  runIsomerAnalysis.cxx  runOscAnalysis.cxx
example/BayesianAnalysis/src/model/: ExpModel.cxx  ExpModel.h  NGaussModel.cxx  OneGaussModel.cxx  OneGaussModel.h  OscModel.cxx  OscModel.h  RooMyAnalyticalPdf.cxx  RooMypdf.cpp  RooMypdf.h  RooMypdfDict.cpp  RooMypdfDict.h  TwoGaussModel.cxx  TwoGaussModel.h
example/Oscillation/: CMakeLists.txt  OscAnalysisLinkDef.h
example/Oscillation/src/data/: FileReader.cxx  FileReader.h  SidsDataSet.cxx  SidsDataSet.h  SidsParameters.cxx  SidsParameters.h
example/Oscillation/src/macro/: Analysis.cxx  Analysis.h  IsomerAnalysis.cxx  IsomerAnalysis.h  OscillationAnalysis.cxx  OscillationAnalysis.h  runIsomerAnalysis.cxx  runOscAnalysis.cxx
example/Oscillation/src/model/: CountingExp.cxx  CountingExp.h  ExpModel.cxx  ExpModel.h  NGaussModel.cxx  NGaussModel.h  OneGaussModel.cxx  OneGaussModel.h  OscModel.cxx  OscModel.h  TwoGaussModel.cxx  TwoGaussModel.h
example/OscillationExperiment/: CMakeLists.txt  OscAnalysisLinkDef.h
example/OscillationExperiment/analysis/: OscAnaManager.cxx  OscAnaManager.h  OscSimulation.cxx  OscSimulation.h
example/OscillationExperiment/data/: OscDataSet.cxx  OscDataSet.h  OscMCPoint.cxx  OscMCPoint.h  OscPayload.h
example/OscillationExperiment/macro/: OscillationAnalysis.cfg.in  runOscAnalysis.sh.in  startOscSampler.sh.in  startOscSampler1.sh.in  startOscSampler2.sh.in  startOscSampler3.sh.in  startOscSampler4.sh.in  startOscSink.sh.in
example/OscillationExperiment/model/: ExpModel.cxx  ExpModel.h  OscModel.cxx  OscModel.h  RooMyAnalyticalPdf.cxx  RooMyAnalyticalPdf.h
example/OscillationExperiment/run/: runOscAnalysis.cxx  runOscFileSink.cxx  runOscSampler.cxx
example/OscillationExperiment/tools/data/: DataSet.cxx  DataSet.h  FileReader.h  IOManager.cxx  IOManager.h
example/OscillationExperiment/tools/stat/: BatAnalysis.cxx  BatAnalysis.h
examples/MQ/1-sampler-sink/: CMakeLists.txt  runExample1Sampler.cxx  runExample1Sink.cxx
examples/MQ/2-sampler-processor-sink/: FairMQExample2Sampler.cxx
examples/MQ/3-dds/: FairMQExample3Sampler.cxx
examples/MQ/serialization/src/: test_newConfig.cxx
examples/advanced/Tutorial3/MQ/run/: startMQTut3All.sh.in
fairmq/: CMakeLists.txt  FairMQDevice.cxx  FairMQDevice.h  FairMQTransportFactory.h  runFairMQDevice.h
fairmq/devices/: GenericSampler.tpl
fairmq/nanomsg/: FairMQTransportFactoryNN.cxx  FairMQTransportFactoryNN.h
fairmq/options/: FairMQEventManager.h  FairMQProgOptions.cxx  FairMQProgOptions.h  FairProgOptions.cxx  FairProgOptions.h
fairmq/run/: runBenchmarkSampler.cxx  runMerger.cxx  runProxy.cxx  runSink.cxx  runSplitter.cxx  startMQBenchmark.sh.in
fairmq/zeromq/: FairMQTransportFactoryZMQ.cxx  FairMQTransportFactoryZMQ.h
